# frontacc_conv

./: frontacc_conv.py  frontacc_conv.sh  pyproject.toml  requirements.txt  setup.py
frontacc_conv.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test_data/: GLAccountTransactions.qif  GLAccountTransactions.xls
